<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_id"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/design_default_color_secondary_variant">
            <TextView
                android:id="@+id/UserMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diam_gmail_com">

            </TextView>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/weather"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@id/appbar">

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="40dp"
            android:layout_margin="5dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/afficher_votre_position_actuelle"
                    android:textSize="15sp"
                    android:gravity="center">

                </TextView>
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/switchLoc"
                    android:text="@string/oui"
                    android:layout_gravity="center">

                </Switch>
                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/mery"
                    android:textSize="35sp"
                    android:gravity="center">

                </TextView>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            app:cardCornerRadius="20dp"
            android:layout_margin="5dp"
            app:cardElevation="40dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/afficher_la_temperature"
                    android:textSize="15sp"
                    android:gravity="center">

                </TextView>
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/switchTemp"
                    android:text="@string/oui"
                    android:layout_gravity="center">

                </Switch>
                <TextView
                    android:id="@+id/tamper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_29_c"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-black"
                    android:textSize="40sp"
                    android:gravity="center">

                </TextView>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather"
        tools:listitem="@layout/task_card">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:id="@+id/addBtn_id"
        android:layout_margin="15dp"
        android:src="@drawable/ic_add"
        android:layout_alignParentBottom="true">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>


</RelativeLayout>